Name:           TokyoCabinet
Version:        0.0.1
Cabal-Version:  >= 1.6.0.2
License:        BSD3
License-File:   LICENSE
Author:         Tom Tsuruhara
Maintainer:     tom.lpsd@gmail.com
Stability:      experimental
Homepage:       http://tom-lpsd.dyndns.org/tom/ (Japanese)
Category:       Database
Synopsis:       bindings to Tokyo Cabinet (modern implementaion of DBM)
Description:    interface to Tokyo Cabinet library.
Tested-With:    GHC
Build-Type:     Simple

Flag BuildTest
  Description:  make tests and install it if True
  Default:      False

Library
  Build-Depends:        base, bytestring
  Exposed-modules:
    Database.TokyoCabinet,
    Database.TokyoCabinet.HDB
    Database.TokyoCabinet.HDB.C
    Database.TokyoCabinet.Error
    Database.TokyoCabinet.List
    Database.TokyoCabinet.List.C
    Database.TokyoCabinet.Storable
  Extensions:           CPP, ForeignFunctionInterface,
                        EmptyDataDecls, TypeSynonymInstances
  Extra-libraries:      tokyocabinet
  Extra-lib-dirs:       /usr/local/lib
  Include-dirs:         /usr/local/include
  ghc-options:          -Wall

Executable ListTest
  if flag(BuildTest)
    Buildable:            True
  else
    Buildable:            False
  Main-Is:              tests/ListTest.hs
  Extra-libraries:      tokyocabinet
  Build-depends:        HUnit >= 1.2
  Other-modules:
    Database.TokyoCabinet.List
    Database.TokyoCabinet.List.C

Executable HDBTest
  if flag(BuildTest)
    Buildable:            True
  else
    Buildable:            False
  Main-Is:              tests/HDB.hs
  Extra-libraries:      tokyocabinet
  Build-depends:        HUnit >= 1.2
  Other-modules:
    Database.TokyoCabinet.HDB
    Database.TokyoCabinet.HDB.C
    Database.TokyoCabinet.Error
    Database.TokyoCabinet.List
    Database.TokyoCabinet.List.C
    Database.TokyoCabinet.Storable